--- a/index.html
+++ b/index.html
@@ -2,23 +2,46 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
-     <!-- Scripts -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <!-- Scripts -->
 
     <title>AMaze.Me</title>
   </head>
-  <body>
-    <header class="headerWrapper">
+  <body class="container-fluid">
+    <!-- Header -->
+    <header class="headerWrapper row">
 
     </header>
-    <section>
-      <div class="gameWrapper">
+    <!-- /Header -->
+
+    <!-- Body -->
+    <section class="row">
+      <div class="gameWrapper col-9">
         <canvas id="gameCanvas"></canvas>
       </div>
-      <div class="statusWrapper">
+      <div class="statusWrapper col-3">
+        <canvas id="statusCanvas"></canvas>
       </div>
     </section>
+    <!-- /Body -->
+
+    <!-- Footer -->
+    <footer class="footerWrapper row">
+    </footer>
+    <!-- /Footer -->
+
+    <!-- How to modal -->
+
+    <!--Bootstrap Javascript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
   </body>
 </html>
