Added unit tests for map object
Fixed some minor formatting in mapdata.js.
Added mapSpec.js to test the map object.
Added calls to mapSpec.js in tests.html.

--- a/tests.html
+++ b/tests.html
@@ -21,6 +21,7 @@
 
     <!-- Load tests -->
     <script type="text/javascript" src="spec/typesSpec.js"></script>
+    <script type="text/javascript" src="spec/mapSpec.js"></script>
 
   </head>
   <body>
