Added unit tests for the ray object
Rearranged some tests in mapSpec.js for better readabillity.
Created raySpec.js for initial Ray2 tests.
Added raySpec.js to test.html.

--- a/tests.html
+++ b/tests.html
@@ -22,6 +22,7 @@
     <!-- Load tests -->
     <script type="text/javascript" src="spec/typesSpec.js"></script>
     <script type="text/javascript" src="spec/mapSpec.js"></script>
+    <script type="text/javascript" src="spec/raySpec.js"></script>
 
   </head>
   <body>
