Canvas resolution setting code
Added test code for resizing the canvas element's resolution when the window resizes.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <!-- Body -->
     <section class="row">
-      <div class="gameWrapper col-9">
+      <div id="gameDiv" class="gameWrapper col-9">
         <canvas id="gameCanvas"></canvas>
       </div>
-      <div class="statusWrapper col-3">
+      <div id="statusDiv" class="statusWrapper col-3">
         <canvas id="statusCanvas"></canvas>
       </div>
     </section>
