Initial player code
Added screen clearing code and comments to main.js
Added player and object information to mapdata.js
Added initial player object code.
Added player.js script reference to index.html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script type="text/javascript" src="assets/scripts/map.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
     <!-- Game scripts -->
+    <script type="text/javascript" src="assets/scripts/player.js"></script>
     <script type="text/javascript" src="assets/scripts/main.js"></script>
 
   </body>
