Added object and player start points
Added object and player spawn point code to map.js
Added player and object spawn point tests to mapSpec.js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     </footer>
     <!-- /Footer -->
 
-    <!-- How to modal -->
+    <!-- Info modal -->
+    <!-- Settings modal -->
 
     <!--Bootstrap Javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
