Added collision detection
Moved Ray2 object code to ray.js.
Added ray.js to tests.html and index.html
Added tile passability test to RayMap2 object in map.js
Added simple collision detection code to Player object in player.js
Added new unit tests for new map functions in mapSpec.js

--- a/tests.html
+++ b/tests.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="assets/scripts/types.js"></script>
     <script type="text/javascript" src="assets/scripts/mapdata.js"></script>
     <script type="text/javascript" src="assets/scripts/map.js"></script>
+    <script type="text/javascript" src="assets/scripts/ray.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
 
     <!-- Load tests -->
