--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="assets/scripts/types.js"></script>
     <script type="text/javascript" src="assets/scripts/mapdata.js"></script>
     <script type="text/javascript" src="assets/scripts/map.js"></script>
+    <script type="text/javascript" src="assets/scripts/ray.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
     <!-- Game scripts -->
     <script type="text/javascript" src="assets/scripts/player.js"></script>
