Initial object code
Added code to generate objects from templates to object.js
Added code to register objects on map to map.js
Added object templates to mapdata.js
Added object.js script to index.html
Added lamp.png and lampico.png

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script type="text/javascript" src="assets/scripts/ray.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
     <!-- Game scripts -->
+    <script type="text/javascript" src="assets/scripts/object.js"></script>
     <script type="text/javascript" src="assets/scripts/player.js"></script>
     <script type="text/javascript" src="assets/scripts/main.js"></script>
 
