--- a/tests.html
+++ b/tests.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jasmine/2.7.0/jasmine.css" integrity="sha256-Lvw3NXBQpey3hzC7oIV+PtoCIf1lRWDacN8xlFIfdwQ=" crossorigin="anonymous" />
 
     <!-- Load scripts -->
+    <script type="text/javascript" src="assets/scripts/helpers.js"></script>
     <script type="text/javascript" src="assets/scripts/types.js"></script>
     <script type="text/javascript" src="assets/scripts/mapdata.js"></script>
     <script type="text/javascript" src="assets/scripts/map.js"></script>
