Added map tests
Improved RayMap2 unit test descriptions
Added tests for RayMap2 object functions

--- a/tests.html
+++ b/tests.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="assets/scripts/map.js"></script>
     <script type="text/javascript" src="assets/scripts/ray.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
+    <script type="text/javascript" src="assets/scripts/object.js"></script>
+    <script type="text/javascript" src="assets/scripts/player.js"></script>
 
     <!-- Load tests -->
     <script type="text/javascript" src="spec/typesSpec.js"></script>
