--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Engine Scripts -->
     <script type="text/javascript" src="assets/scripts/helpers.js"></script>
     <script type="text/javascript" src="assets/scripts/types.js"></script>
-    <script type="text/javascript" src="assets/scripts/mapdata.js"></script>
+    <script type="text/javascript" src="assets/scripts/templates.js"></script>
     <script type="text/javascript" src="assets/scripts/map.js"></script>
     <script type="text/javascript" src="assets/scripts/ray.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
