--- a/tests.html
+++ b/tests.html
@@ -16,7 +16,7 @@
     <!-- Load scripts -->
     <script type="text/javascript" src="assets/scripts/helpers.js"></script>
     <script type="text/javascript" src="assets/scripts/types.js"></script>
-    <script type="text/javascript" src="assets/scripts/mapdata.js"></script>
+    <script type="text/javascript" src="assets/scripts/templates.js"></script>
     <script type="text/javascript" src="assets/scripts/map.js"></script>
     <script type="text/javascript" src="assets/scripts/ray.js"></script>
     <script type="text/javascript" src="assets/scripts/camera.js"></script>
