Added unit tests for GameObject

--- a/tests.html
+++ b/tests.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="spec/typesSpec.js"></script>
     <script type="text/javascript" src="spec/mapSpec.js"></script>
     <script type="text/javascript" src="spec/raySpec.js"></script>
+    <script type="text/javascript" src="spec/objectSpec.js"></script>
 
   </head>
   <body>
