--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- Game scripts -->
     <script type="text/javascript" src="assets/scripts/object.js"></script>
     <script type="text/javascript" src="assets/scripts/player.js"></script>
+    <script type="text/javascript" src="assets/scripts/gamestate.js"></script>
     <script type="text/javascript" src="assets/scripts/main.js"></script>
 
   </body>
