Initial header navbar and splash screen layout

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <div id="pageWrapper" class="container-fluid no-gutters">
       <!-- Header -->
       <header class="headerWrapper row no-gutters">
+
+        <div class="navWrapper">
+          <nav class="navbar">
+            <a href="#" class="navbar-toggler" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+              Menu
+            </a>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+              <form class="form-inline my-2 my-lg-0">
+                TEXT!
+              </form>
+            </div>
+          </nav>
+        </div>
+
       </header>
       <!-- /Header -->
       <!-- Body -->
@@ -24,7 +38,6 @@
       </section>
       <!-- /Body -->
     </div>
-
 
     <!--Bootstrap Javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
