--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
           </nav>
         </div>
 
+        <div id="clock" class="gameclock">Not a clock</div>
+
       </header>
       <!-- /Header -->
       <!-- Body -->
