Added clock to header

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                     dropdown closing automatically -->
               <form class="splashform">
 
+                <!-- difficulty selector goes here -->
+
                 <button id="learnBtn" class="btn btn-secondary game-btn" type="button">Learn</button>
                 <button id="playBtn" class="btn btn-secondary game-btn" type="button">Play</button>
 
@@ -56,7 +58,7 @@
           </nav>
         </div>
 
-        <div id="clock" class="gameclock">Not a clock</div>
+        <div id="clock" class="gameclock">0:00</div>
 
       </header>
       <!-- /Header -->
