Initial header and splashscreen styling

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           </nav>
         </div>
 
+        <!-- Pause control here -->
         <div id="clock" class="gameclock">0:00</div>
 
       </header>
