--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         <div class="navWrapper">
           <nav class="navbar">
             <a href="#" id="menuBtn" class="navbar-toggler" data-toggle="collapse" data-target="#splashscreen" aria-controls="splashscreen" aria-expanded="false" aria-label="Toggle navigation">
-              Menu
+              <svg class="nav-menu-icon" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 500 500">
+                  <g id="menu_icon" data-name="menu_icon">
+                      <line class="nav-menu_icon_line" x1="50" y1="50" x2="450" y2="50"/>
+                      <line class="nav-menu_icon_line" x1="50" y1="250" x2="450" y2="250"/>
+                      <line class="nav-menu_icon_line" x1="50" y1="450" x2="450" y2="450"/>
+                  </g>
+              </svg>
             </a>
             <div class="collapse navbar-collapse show" id="splashscreen">
               <h1 class="splashtext">Objective</h1>
@@ -43,16 +49,35 @@
               <p class="splashtext">
                 When you're ready select "Play" and try and get the fastest time.
               </p>
-
               <!-- using a form here stops the nav
                     dropdown closing automatically -->
               <form class="splashform">
+                <h1 class"splashtext">Game controls</h1>
+                <!-- Difficulty selector -->
+                <div id="difficultycontrols" class="btn-group btn-group-toggle" data-toggle="buttons">
+                  <label class="btn btn-primary active">
+                    <input type="radio" name="options" id="optEasy" autocomplete="off" checked>
+                      Easy
+                  </label>
+                  <label class="btn btn-primary">
+                    <input type="radio" name="options" id="optNormal" autocomplete="off">
+                      Normal
+                  </label>
+                  <label class="btn btn-primary">
+                    <input type="radio" name="options" id="optHard" autocomplete="off">
+                      Hard
+                  </label>
+                </div>
+                <!-- Game start controls -->
+                <div id="gamecontrols">
+                  <button id="learnBtn" class="btn btn-secondary game-btn" type="button">
+                    Learn
+                  </button>
 
-                <!-- difficulty selector goes here -->
-
-                <button id="learnBtn" class="btn btn-secondary game-btn" type="button">Learn</button>
-                <button id="playBtn" class="btn btn-secondary game-btn" type="button">Play</button>
-
+                  <button id="playBtn" class="btn btn-secondary game-btn" type="button">
+                    Play
+                  </button>
+                </div>
               </form>
             </div>
           </nav>
