Hooked difficulty UI to gamestate

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
               <p class="splashtext">
                 When you're ready select "Play" and try and get the fastest time.
               </p>
+              <hr class="splashseparator" />
               <!-- using a form here stops the nav
                     dropdown closing automatically -->
               <form class="splashform">
-                <h1 class"splashtext">Game controls</h1>
                 <!-- Difficulty selector -->
                 <div id="difficultycontrols" class="btn-group btn-group-toggle" data-toggle="buttons">
                   <label class="btn btn-primary active">
