Added test touch joystick

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Select "Learn" to move around the maze and learn it's layout.
               </p>
               <p class="splashtext">
-                When you're ready select "Play" and try and get the fastest time.
+                When you're ready select "Play" and try to get the fastest time!
               </p>
               <hr class="splashseparator" />
               <!-- using a form here stops the nav
@@ -90,6 +90,7 @@
       <!-- Body -->
       <section class="row no-gutters">
         <div id="gameDiv" class="gameWrapper col-12">
+          <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px;"></div>
           <canvas id="gameCanvas"></canvas>
         </div>
       </section>
@@ -100,6 +101,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="assets/scripts/joy.js"></script>
     <!-- Engine Scripts -->
     <script type="text/javascript" src="assets/scripts/helpers.js"></script>
     <script type="text/javascript" src="assets/scripts/types.js"></script>
@@ -112,6 +114,7 @@
     <script type="text/javascript" src="assets/scripts/player.js"></script>
     <script type="text/javascript" src="assets/scripts/gamestate.js"></script>
     <script type="text/javascript" src="assets/scripts/main.js"></script>
+
 
   </body>
 </html>
