Added basic touch element

--- a/index.html
+++ b/index.html
@@ -89,8 +89,28 @@
       <!-- /Header -->
       <!-- Body -->
       <section class="row no-gutters">
+        <!-- Touch control overlay -->
+        <div id="touchControls">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
+            <g id="Touch-Centre">
+              <circle class="touch-icon" cx="500" cy="500" r="174.5"/>
+            </g>
+            <g id="Touch-Up">
+              <polygon class="touch-icon" points="325.87 299.5 500 0.99 674.13 299.5 325.87 299.5"/>
+            </g>
+            <g id="Touch-Left">
+              <polygon class="touch-icon" points="0.99 500 299.5 325.87 299.5 674.13 0.99 500"/>
+            </g>
+            <g id="Touch-Down">
+              <polygon class="touch-icon" points="325.87 700.5 674.13 700.5 500 999.01 325.87 700.5"/>
+            </g>
+            <g id="Touch-Right">
+              <polygon class="touch-icon" points="700.5 325.87 999.01 500 700.5 674.13 700.5 325.87"/>
+            </g>
+          </svg>
+        </div>
+
         <div id="gameDiv" class="gameWrapper col-12">
-          <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px;"></div>
           <canvas id="gameCanvas"></canvas>
         </div>
       </section>
@@ -101,7 +121,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="assets/scripts/joy.js"></script>
     <!-- Engine Scripts -->
     <script type="text/javascript" src="assets/scripts/helpers.js"></script>
     <script type="text/javascript" src="assets/scripts/types.js"></script>
