Fixed validation errors in index.html

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                 <!-- Difficulty selector -->
                 <div id="difficultycontrols" class="btn-group btn-group-toggle" data-toggle="buttons">
                   <label class="btn btn-primary active">
-                    <input type="radio" name="options" id="optEasy" autocomplete="off" checked>
+                    <input type="radio" name="options" id="optEasy" checked>
                       Easy
                   </label>
                   <label class="btn btn-primary">
-                    <input type="radio" name="options" id="optNormal" autocomplete="off">
+                    <input type="radio" name="options" id="optNormal">
                       Normal
                   </label>
                   <label class="btn btn-primary">
-                    <input type="radio" name="options" id="optHard" autocomplete="off">
+                    <input type="radio" name="options" id="optHard">
                       Hard
                   </label>
                 </div>
@@ -117,22 +117,25 @@
       <!-- /Body -->
     </div>
 
-    <!--Bootstrap Javascript -->
+    <!-- Bootstrap Javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <!-- Third party virtual joystick library  -->
+    <script src="assets/scripts/virtualjoystick.js"></script>
     <!-- Engine Scripts -->
-    <script type="text/javascript" src="assets/scripts/helpers.js"></script>
-    <script type="text/javascript" src="assets/scripts/types.js"></script>
-    <script type="text/javascript" src="assets/scripts/templates.js"></script>
-    <script type="text/javascript" src="assets/scripts/map.js"></script>
-    <script type="text/javascript" src="assets/scripts/ray.js"></script>
-    <script type="text/javascript" src="assets/scripts/camera.js"></script>
+    <script src="assets/scripts/helpers.js"></script>
+    <script src="assets/scripts/types.js"></script>
+    <script src="assets/scripts/templates.js"></script>
+    <script src="assets/scripts/map.js"></script>
+    <script src="assets/scripts/ray.js"></script>
+    <script src="assets/scripts/camera.js"></script>
+
     <!-- Game scripts -->
-    <script type="text/javascript" src="assets/scripts/object.js"></script>
-    <script type="text/javascript" src="assets/scripts/player.js"></script>
-    <script type="text/javascript" src="assets/scripts/gamestate.js"></script>
-    <script type="text/javascript" src="assets/scripts/main.js"></script>
+    <script src="assets/scripts/object.js"></script>
+    <script src="assets/scripts/player.js"></script>
+    <script src="assets/scripts/gamestate.js"></script>
+    <script src="assets/scripts/main.js"></script>
 
 
   </body>
