Preliminary virtual joystick code

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Body -->
       <section class="row no-gutters">
         <!-- Touch control overlay -->
-        <div id="touchControls">
+        <!--<div id="touchControls">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
             <g id="Touch-Centre">
               <circle class="touch-icon" cx="500" cy="500" r="174.5"/>
@@ -108,7 +108,7 @@
               <polygon class="touch-icon" points="700.5 325.87 999.01 500 700.5 674.13 700.5 325.87"/>
             </g>
           </svg>
-        </div>
+        </div>-->
 
         <div id="gameDiv" class="gameWrapper col-12">
           <canvas id="gameCanvas"></canvas>
